# dev-indexer_1

./: .copilot.md  .dockerignore  .gitignore  .prettierrc  .sync_exclude  COPILOT.md  CUDA_REMOTE_GUIDE.md  DEVOPS_TODO.md  Dockerfile  FILE_TRANSFER_README.md  Project_Index.md  README.md  cuda_aliases.sh  dev-indexer_1.code-workspace  dev-multiroot.code-workspace  docker-compose.embedding-worker.yml  docker-compose.yml  indexing_manifest.json  mock_server.py  multi_repo_sync.sh  package-lock.json  package.json  pyproject.toml  quick_sync.sh  remote_cuda.sh  remote_cuda_simple.sh  remote_data.sh  repo_sync_manifest.txt  repo_sync_manifest_aiworkspace.txt  requirements-all.txt  requirements-dev.txt  requirements-train.txt  requirements.txt  run_tests.sh  settings.json  start.sh  sync.sh  sync_config.toml
.github/: copilot-instructions.md
api/: main.py
app/: README.md  __init__.py  main.py  personas.py
docs/: ACADEMIC_DOMAIN_SYSTEM_COMPLETE.md  ACADEMIC_TRAINING_SUMMARY.md  AGENT_BOOTSTRAP_CONTEXT.md  ARCHITECTURE_OVERVIEW.md  CALCULATIVE_FINETUNE_IMPLEMENTATION.json  CHARACTER_CARD_EN.json  DEVELOPMENT_PROGRESS.md  DEV_KNOWLEDGE_GRAPH.md  DOCS_INDEX.md  EMBEDDING_MODEL_PIPELINE.md  FAMILY_CONTEXT_TEMPLATE.md  LINT_FORMATTER_SETUP.md  MEMORY_RAG_INTEGRATION.md  MISTRAL_7B_IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_GPU_ARCHITECTURE.md  MULTI_REPO_SETUP.md  MULTI_ROOT_WORKSPACE.md  PROJECT_INDEX.md  PROJECT_OVERVIEW.md  README.md  REMOTE_DB_ACCESS.md  ROOT_HYGIENE_AUDIT.md  SWITCHR_ROUTER.md  SYSTEM_INTEGRATION_SUMMARY.md  TASK_CHECKLIST.md  (+2 more)
(+359 files in other folders)
