[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E","F","I","UP","B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
